<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="368dp"
        android:layout_height="178dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/detail_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_associated_with_content" />

        <TextView
            android:id="@+id/detail_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            tools:text="New books!" />
        <com.like.LikeButton
            android:layout_gravity="end"
            app:icon_type="heart"
            app:icon_size="25dp"
            android:id="@+id/heart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:srcCompat="@drawable/baseline_place_black_36"
        android:contentDescription="@string/location" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_place_tv"
        app:srcCompat="@drawable/baseline_query_builder_black_36"
        android:contentDescription="@string/date" />

    <ImageView
        android:id="@+id/ticket_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/baseline_credit_card_black_36"
        android:contentDescription="@string/tickets" />

    <TextView
        android:id="@+id/detail_place_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:text="Polish Academy of Sciences" />

    <TextView
        android:id="@+id/detail_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/detail_place_tv"
        tools:text="16:00 19.06.18" />

    <TextView
        android:id="@+id/detail_price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/ticket_iv"
        app:layout_constraintTop_toBottomOf="@+id/detail_date_tv"
        tools:text="free" />

    <TextView
        android:id="@+id/detail_description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticket_iv"
        tools:text="New books in libraries! Come and see!" />

    <TextView
        android:id="@+id/detail_link_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_description_tv"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Link to event" />

    <TextView
        android:id="@+id/detail_price_end_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="free"
        app:layout_constraintStart_toEndOf="@+id/detail_price_tv"
        app:layout_constraintTop_toTopOf="@+id/detail_price_tv" />


</android.support.constraint.ConstraintLayout>
</ScrollView>